# testdocs

./: README.md  doc.rst  json2rst.py  pyproject.toml  readthedocs.yml
docs/: build_doc.py  json2rst.py
docs copy/: doc.json  json2rst.py
docs copy/sphinx/: Makefile  index.rst
docs/sphinx/: Makefile  catchup.rst  conf.py  doc.rst  index.rst  json2rst.py  requirements.txt
pro/rm/: rm_spcombine_v5.pro  spreduce1d_empca.pro
pro/sos/: apo_plotbias.pro  quickextract.pro  quicktrace.pro  quickwave.pro  setup_arc2trace.pro  sos_appendlog.pro  sos_checklimits.pro  sos_log2html.pro  sos_plotbias.pro  sos_plotsn.pro  sosreduce.pro
pro/spec1d/: spcalib_qa.pro  spspec2spfullsky.pro  spspec_target_merge.pro
pro/spec2d/: readplugmap.pro  spcalib.pro  spreduce.pro  (+1 more)
test/: pyproject.toml
test/docs/: build_doc.py  doc.json
test/docs copy/sphinx/: doc.rst
test/docs copy/sphinx/_build/doctrees/: catchup.doctree  doc.doctree  environment.pickle  standards.doctree
test/docs copy/sphinx/_build/html/: catchup.html  daily.html  doc.html  genindex.html  index.html  objects.inv  search.html  searchindex.js  standards.html
test/docs copy/sphinx/_build/html/_sources/: daily.rst.txt  index.rst.txt  sos.rst.txt
test/docs copy/sphinx/_build/html/_static/: bootstrap-sphinx.css
test/docs/sphinx/: requirements.txt
test/docs/sphinx/_build/doctrees/: Dependencies.doctree  daily.doctree  environment.pickle  sos.doctree
test/docs/sphinx/_build/html/: Dependencies.html  catchup.html  daily.html  doc.html  index.html  intro.html  objects.inv  searchindex.js  sos.html
(+59 files in other folders)
