[tool.poetry]
name = "testdocs"
version = "v6_2_0beta"
description = "SDSS BOSS Data Reduction Pipeline"
authors = ["Sean Morrison <smorris0@illinois.edu>"]
homepage = "https://github.com/sdss/idlspec2d"
repository = "https://github.com/sdss/idlspec2d"
documentation = "https://sdss-idlspec2d.readthedocs.org"

